--- a/web/internal/templates/invoices.html
+++ b/web/internal/templates/invoices.html
@@ -2,7 +2,7 @@
 
 {{ define "main" }}
 <form id="invoice-form" hx-post="/invoices" hx-target="this" hx-swap="outerHTML">
-    <div class="sticky top-14 flex items-center gap-6 border-b border-gray-300 bg-white py-2">
+    <div class="flex items-center gap-6 border-b border-gray-300 bg-white py-2">
         <button class="flex justify-center rounded bg-green-400 px-4 py-2 hover:bg-green-500" type="submit">
             <svg class="mr-3 translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
                 viewBox="0 0 512 512">
@@ -19,144 +19,225 @@
             </svg>
             Ver Progresso
         </button>
-        <button class="rounded bg-gray-200 px-4 py-2 font-bold" type="button" hx-get="/invoices/form-section"
-            hx-target="#invoice-form" hx-swap="beforeend" hx-trigger="click">
-            +
-        </button>
         <p class="flex-1 {{ if .FormSuccess }} text-green-500 {{ else }} text-red-500 {{ end }}">{{ .FormMsg }}</p>
     </div>
 
-    {{ if .Invoices }}
-        {{ range .Invoices }}
-            {{ block "invoice-form-section" . }}
-            <section>
-                <div class="flex items-center justify-end pt-2">
-                    <button class="rounded p-1 shadow shadow-gray-400 hover:bg-gray-100 active:bg-gray-200" type="button"
-                        onclick="this.closest('section').remove()">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
-                            <path
-                                d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
-                        </svg>
+    <section>
+        <div class="flex gap-6 border-b border-gray-400 py-4">
+
+            <div class="flex flex-1 flex-col gap-4">
+                <div class="flex flex-col gap-2">
+                    <label for="sender"><strong>Remetente</strong></label>
+                    <select class="h-10 rounded bg-gray-100 p-2" id="sender" name="sender">
+                        {{ range .FormSelectFields.Entities }}
+                            <option value="{{ .Id }}">{{ .Name }}</option>
+                        {{ end }}
+                    </select>
+                    <sub class="text-red-500">{{ .Invoice.Errors.Sender }}</sub>
+                </div>
+
+                <div class="flex flex-col gap-2">
+                    <label for="recipient"><strong>Destinatário</strong></label>
+                    <select class="h-10 rounded bg-gray-100 p-2" id="recipient" name="recipient">
+                        {{ range .FormSelectFields.Entities }}
+                            <option value="{{ .Id }}">{{ .Name }}</option>
+                        {{ end }}
+                    </select>
+                    <sub class="text-red-500">{{ .Invoice.Errors.Recipient }}</sub>
+                </div>
+
+            </div>
+
+            <div class="flex flex-1 flex-col gap-4">
+
+                <div class="flex flex-col gap-2">
+                    <label for="operation"><strong>Operação</strong></label>
+                    <select class="h-10 rounded bg-gray-100 p-2" id="operation" name="operation">
+                        {{ range .FormSelectFields.Operations }}
+                            <option value="{{ . }}">{{ . }}</option>
+                        {{ end }}
+                    </select>
+                    <sub class="text-red-500">{{ .Invoice.Errors.Operation }}</sub>
+                </div>
+
+                <div class="flex flex-col gap-2">
+                    <label for="cfop"><strong>CFOP</strong></label>
+                    <select class="h-10 rounded bg-gray-100 p-2" id="cfop" name="cfop">
+                        {{ range .FormSelectFields.Cfops }}
+                            <option value="{{ . }}">{{ . }}</option>
+                        {{ end }}
+                    </select>
+                    <sub class="text-red-500">{{ .Invoice.Errors.Cfop }}</sub>
+                </div>
+            </div>
+
+            <div class="flex flex-1 flex-col gap-4">
+
+                <div class="flex flex-col gap-2">
+                    <label for="is_icms_contributor"><strong>Contribuinte ICMS</strong></label>
+                    <select class="h-10 rounded bg-gray-100 p-2" id="is_icms_contributor" name="is_icms_contributor">
+                        {{ range .FormSelectFields.IcmsOptions }}
+                            <option value="{{ . }}">{{ . }}</option>
+                        {{ end }}
+                    </select>
+                    <sub class="text-red-500">{{ .Invoice.Errors.IsIcmsContributor }}</sub>
+                </div>
+
+                <div class="flex flex-col gap-2">
+                    <label for="is_final_customer"><strong>Consumidor Final</strong></label>
+                    <select class="h-10 rounded bg-gray-100 p-2" id="is_final_customer" name="is_final_customer">
+                        {{ range .FormSelectFields.BooleanField }}
+                            <option value="{{ . }}">{{ . }}</option>
+                        {{ end }}
+                    </select>
+                    <sub class="text-red-500">{{ .Invoice.Errors.IsFinalCustomer }}</sub>
+                </div>
+
+            </div>
+
+            <div class="flex flex-1 flex-col gap-4">
+                <div class="flex flex-col gap-2">
+                    <label for="shipping"><strong>Frete</strong></label>
+                    <input class="rounded bg-gray-100 p-2" type="number" step="0.01" id="shipping" name="shipping"
+                        value="{{ .Invoice.Shipping }}">
+                    <sub class="text-red-500">{{ .Invoice.Errors.Shipping }}</sub>
+                </div>
+
+                <div class="flex flex-col gap-2">
+                    <label for="add_shipping_to_total"><strong>Adicionar Frete ao Total</strong></label>
+                    <select class="h-10 rounded bg-gray-100 p-2" id="add_shipping_to_total"
+                        name="add_shipping_to_total">
+                        {{ range .FormSelectFields.BooleanField }}
+                            <option value="{{ . }}">{{ . }}</option>
+                        {{ end }}
+                    </select>
+                    <sub class="text-red-500">{{ .Invoice.Errors.AddShippingToTotal }}</sub>
+                </div>
+
+            </div>
+
+            <div class="flex flex-1 flex-col gap-4">
+
+                <div class="flex flex-col gap-2">
+                    <label for="gta"><strong>GTA</strong></label>
+                    <input class="rounded bg-gray-100 p-2" type="text" id="gta" name="gta" value="{{ .Invoice.Gta }}">
+                    <sub class="text-red-500">{{ .Invoice.Errors.Gta }}</sub>
+                </div>
+
+                <div class="flex flex-col gap-2">
+                    <strong>Produtos</strong>
+                    <button onclick="this.closest('section').querySelector('dialog').showModal()"
+                        class="group w-full rounded bg-gray-600 px-4 py-2 text-white hover:bg-gray-700" type="button">
+                        <div class="group-active:scale-90">Gerenciar</div>
                     </button>
+                    <sub class="text-red-500">{{ .Invoice.Errors.Items }}</sub>
                 </div>
 
-                <div class="flex gap-6 border-b border-gray-400 pb-4">
+            </div>
 
-                    <div class="flex-1">
-                        <div class="flex flex-col gap-2">
-                            <label for="sender"><strong>Remetente</strong></label>
-                            <select class="h-10 rounded bg-gray-100 p-2" id="sender" name="sender">
-                                {{ range .FormSelectFields.Entities }}
-                                    <option value="{{ .Id }}">{{ .Name }}</option>
-                                {{ end }}
-                            </select>
-                            <sub class="text-red-500"></sub>
-                        </div>
+        </div>
 
-                        <div class="flex flex-col gap-2">
-                            <label for="recipient"><strong>Destinatário</strong></label>
-                            <select class="h-10 rounded bg-gray-100 p-2" id="recipient" name="recipient">
-                                {{ range .FormSelectFields.Entities }}
-                                    <option value="{{ .Id }}">{{ .Name }}</option>
-                                {{ end }}
-                            </select>
-                            <sub class="text-red-500"></sub>
-                        </div>
+        <dialog id="invoice-items-dialog" class="relative h-2/3 w-1/2 rounded px-6 pb-4 outline-transparent">
+            <div class="sticky top-0 z-10 flex items-center gap-6 border-b border-gray-300 bg-white py-2">
+                <button class="flex justify-center rounded bg-green-400 px-4 py-2 hover:bg-green-500" type="button"
+                    onclick="this.closest('dialog').close()">
+                    <svg class="mr-3 translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
+                        viewBox="0 0 512 512">
+                        <path
+                            d="M156.6 384.9L125.7 354c-8.5-8.5-11.5-20.8-7.7-32.2c3-8.9 7-20.5 11.8-33.8L24 288c-8.6 0-16.6-4.6-20.9-12.1s-4.2-16.7 .2-24.1l52.5-88.5c13-21.9 36.5-35.3 61.9-35.3l82.3 0c2.4-4 4.8-7.7 7.2-11.3C289.1-4.1 411.1-8.1 483.9 5.3c11.6 2.1 20.6 11.2 22.8 22.8c13.4 72.9 9.3 194.8-111.4 276.7c-3.5 2.4-7.3 4.8-11.3 7.2v82.3c0 25.4-13.4 49-35.3 61.9l-88.5 52.5c-7.4 4.4-16.6 4.5-24.1 .2s-12.1-12.2-12.1-20.9V380.8c-14.1 4.9-26.4 8.9-35.7 11.9c-11.2 3.6-23.4 .5-31.8-7.8zM384 168a40 40 0 1 0 0-80 40 40 0 1 0 0 80z" />
+                    </svg>
+                    Confirmar
+                </button>
+                <button class="rounded bg-gray-200 px-4 py-2 font-bold" type="button"
+                    hx-get="/invoices/items/form-section" hx-target="#invoice-items-dialog" hx-swap="beforeend"
+                    hx-trigger="click">
+                    +
+                </button>
+            </div>
 
+            {{ range .Invoice.Items }}
+                {{ block "invoice-item-form-section" . }}
+                <section>
+                    <div class="flex items-center justify-end pr-1 pt-2">
+                        <button class="rounded p-1 shadow shadow-gray-400 hover:bg-gray-100 active:bg-gray-200"
+                            type="button" onclick="this.closest('section').remove()">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
+                                <path
+                                    d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
+                            </svg>
+                        </button>
                     </div>
 
-                    <div class="flex-1">
+                    <div class="flex gap-6 border-b border-gray-400 pb-4">
 
-                        <div class="flex flex-col gap-2">
-                            <label for="operation"><strong>Operação</strong></label>
-                            <select class="h-10 rounded bg-gray-100 p-2" id="operation" name="operation">
-                                {{ range .FormSelectFields.Operations }}
-                                    <option value="{{ . }}">{{ . }}</option>
-                                {{ end }}
-                            </select>
-                            <sub class="text-red-500"></sub>
+                        <div class="flex flex-1 flex-col gap-4">
+
+                            <div class="flex flex-col gap-2">
+                                <label for="group"><strong>Grupo</strong></label>
+                                <select class="h-10 rounded bg-gray-100 p-2" id="group" name="group">
+                                    {{ range .FormSelectFields.Groups }}
+                                        <option value="{{ . }}">{{ . }}</option>
+                                    {{ end }}
+                                </select>
+                                <sub class="text-red-500">{{ .Errors.Group }}</sub>
+                            </div>
+
+                            <div class="flex flex-col gap-2">
+                                <label for="description"><strong>Descrição</strong></label>
+                                <input class="rounded bg-gray-100 p-2" type="text" id="description" name="description"
+                                    value="">
+                                <sub class="text-red-500">{{ .Errors.Description }}</sub>
+                            </div>
+
                         </div>
 
-                        <div class="flex flex-col gap-2">
-                            <label for="cfop"><strong>CFOP</strong></label>
-                            <select class="h-10 rounded bg-gray-100 p-2" id="cfop" name="cfop">
-                                {{ range .FormSelectFields.Cfops }}
-                                    <option value="{{ . }}">{{ . }}</option>
-                                {{ end }}
-                            </select>
-                            <sub class="text-red-500"></sub>
+                        <div class="flex flex-1 flex-col gap-4">
+
+                            <div class="flex flex-col gap-2">
+                                <label for="origin"><strong>Origem</strong></label>
+                                <select class="h-10 rounded bg-gray-100 p-2" id="origin" name="origin">
+                                    {{ range .FormSelectFields.Origins }}
+                                        <option value="{{ . }}">{{ . }}</option>
+                                    {{ end }}
+                                </select>
+                                <sub class="text-red-500">{{ .Errors.Origin }}</sub>
+                            </div>
+
+                            <div class="flex flex-col gap-2">
+                                <label for="unity_of_measurement"><strong>Unidade de medida</strong></label>
+                                <select class="h-10 rounded bg-gray-100 p-2" id="unity_of_measurement"
+                                    name="unity_of_measurement">
+                                    {{ range .FormSelectFields.UnitiesOfMeasurement }}
+                                        <option value="{{ . }}">{{ . }}</option>
+                                    {{ end }}
+                                </select>
+                                <sub class="text-red-500">{{ .Errors.UnityOfMeasurement }}</sub>
+                            </div>
+
+                        </div>
+
+                        <div class="flex flex-1 flex-col gap-4">
+
+                            <div class="flex flex-col gap-2">
+                                <label for="quantity"><strong>Quantidade</strong></label>
+                                <input class="rounded bg-gray-100 p-2" type="number" step="0.01" id="quantity"
+                                    name="quantity" value="{{ .Quantity }}">
+                                <sub class="text-red-500">{{ .Errors.Quantity }}</sub>
+                            </div>
+
+                            <div class="flex flex-col gap-2">
+                                <label for="value_per_unity"><strong>Valor unitário</strong></label>
+                                <input class="rounded bg-gray-100 p-2" type="number" step="0.01" id="value_per_unity"
+                                    name="value_per_unity" value="{{ .ValuePerUnity }}">
+                                <sub class="text-red-500">{{ .Errors.ValuePerUnity }}</sub>
+                            </div>
+
                         </div>
                     </div>
-
-                    <div class="flex-1">
-
-                        <div class="flex flex-col gap-2">
-                            <label for="is_icms_contributor"><strong>Contribuinte ICMS</strong></label>
-                            <select class="h-10 rounded bg-gray-100 p-2" id="is_icms_contributor" name="is_icms_contributor">
-                                {{ range .FormSelectFields.IcmsOptions }}
-                                    <option value="{{ . }}">{{ . }}</option>
-                                {{ end }}
-                            </select>
-                            <sub class="text-red-500"></sub>
-                        </div>
-
-                        <div class="flex flex-col gap-2">
-                            <label for="is_final_customer"><strong>Consumidor Final</strong></label>
-                            <select class="h-10 rounded bg-gray-100 p-2" id="is_final_customer" name="is_final_customer">
-                                {{ range .FormSelectFields.BooleanField }}
-                                    <option value="{{ . }}">{{ . }}</option>
-                                {{ end }}
-                            </select>
-                            <sub class="text-red-500"></sub>
-                        </div>
-
-                    </div>
-
-                    <div class="flex-1">
-                        <div class="flex flex-col gap-2">
-                            <label for="shipping"><strong>Frete</strong></label>
-                            <input class="rounded bg-gray-100 p-2" type="number" step="0.01" id="shipping" name="shipping"
-                                value="{{ .Shipping }}">
-                            <sub class="text-red-500"></sub>
-                        </div>
-
-                        <div class="flex flex-col gap-2">
-                            <label for="add_shipping_to_total"><strong>Adicionar Frete ao Total</strong></label>
-                            <select class="h-10 rounded bg-gray-100 p-2" id="add_shipping_to_total"
-                                name="add_shipping_to_total">
-                                {{ range .FormSelectFields.BooleanField }}
-                                    <option value="{{ . }}">{{ . }}</option>
-                                {{ end }}
-                            </select>
-                            <sub class="text-red-500"></sub>
-                        </div>
-
-                    </div>
-
-                    <div class="flex-1">
-
-                        <div class="flex flex-col gap-2">
-                            <label for="gta"><strong>GTA</strong></label>
-                            <input class="rounded bg-gray-100 p-2" type="text" id="gta" name="gta" value="{{ .Gta }}">
-                            <sub class="text-red-500"></sub>
-                        </div>
-
-                        <div class="flex flex-col gap-2">
-                            <strong>Produtos/Serviços</strong>
-                            <button onclick="this.closest('section').querySelector('dialog').showModal()"
-                                class="group w-full rounded bg-gray-600 px-4 py-2 text-white hover:bg-gray-700" type="button">
-                                <div class="group-active:scale-90">Gerenciar</div>
-                            </button>
-                        </div>
-
-                    </div>
-
-                </div>
-
-                <dialog>Form de itens da nf</dialog>
-            </section>
+                </section>
+                {{ end }}
             {{ end }}
-        {{ end }}
-    {{ end }}
+        </dialog>
+    </section>
 </form>
 {{ end }}
