--- a/web/internal/templates/layout.html
+++ b/web/internal/templates/layout.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header hx-boost="true" class="sticky top-0 flex justify-between bg-sky-700 px-4 py-2 text-white sm:px-8 sm:py-3">
+    <header hx-boost="true" class="sticky top-0 z-10 flex justify-between bg-sky-700 px-4 py-2 text-white sm:px-8 sm:py-3">
         <h1 class="text-xl">
             <a href="/">NFF - Nota Fiscal Fácil</a>
         </h1>
@@ -27,7 +27,7 @@
                 </a>
                 <li class="group relative cursor-pointer rounded-t hover:bg-sky-800">
                     <div class="px-4 py-1">Nota Fiscal</div>
-                    <ul class="absolute z-10 hidden w-full rounded-b bg-sky-800 group-hover:block">
+                    <ul class="absolute hidden w-full rounded-b bg-sky-800 group-hover:block">
                         <a href="/invoices">
                             <li class="rounded px-4 py-1 hover:bg-sky-900 active:scale-90">Emitir</li>
                         </a>
