--- a/web/internal/templates/invoices.html
+++ b/web/internal/templates/invoices.html
@@ -2,8 +2,8 @@
 
 {{ define "main" }}
 <form id="invoice-form" hx-post="/invoices" hx-target="this" hx-swap="outerHTML">
-    <div class="flex items-center gap-6 border-b border-gray-300 bg-white py-2">
-        <button class="flex justify-center rounded bg-green-400 px-4 py-2 hover:bg-green-500" type="submit">
+    <div class="flex items-center gap-6 border-b border-gray-300 bg-white pb-2">
+        <button class="flex justify-center rounded bg-green-400 px-4 py-2 hover:bg-green-500 active:bg-green-600" type="submit">
             <svg class="mr-3 translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
                 viewBox="0 0 512 512">
                 <path
@@ -137,9 +137,9 @@
 
         </div>
 
-        <dialog id="invoice-items-dialog" class="relative h-2/3 w-1/2 rounded px-6 pb-4 outline-transparent">
+        <dialog id="invoice-items-dialog" class="relative h-2/3 rounded px-6 pb-4 outline-transparent sm:w-11/12 md:w-3/4 lg:w-2/3">
             <div class="sticky top-0 z-10 flex items-center gap-6 border-b border-gray-300 bg-white py-2">
-                <button class="flex justify-center rounded bg-green-400 px-4 py-2 hover:bg-green-500" type="button"
+                <button class="flex justify-center rounded bg-green-400 px-4 py-2 hover:bg-green-500 active:bg-green-600" type="button"
                     onclick="this.closest('dialog').close()">
                     <svg class="mr-3 translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
                         viewBox="0 0 512 512">
@@ -148,7 +148,7 @@
                     </svg>
                     Confirmar
                 </button>
-                <button class="rounded bg-gray-200 px-4 py-2 font-bold" type="button"
+                <button class="rounded bg-gray-200 px-4 py-2 font-bold hover:bg-gray-300 active:bg-gray-400" type="button"
                     hx-get="/invoices/items/form-section" hx-target="#invoice-items-dialog" hx-swap="beforeend"
                     hx-trigger="click">
                     +
@@ -168,9 +168,9 @@
                         </button>
                     </div>
 
-                    <div class="flex gap-6 border-b border-gray-400 pb-4">
+                    <div class="flex flex-wrap gap-6 border-b border-gray-400 pb-4">
 
-                        <div class="flex flex-1 flex-col gap-4">
+                        <div class="flex flex-1 flex-col flex-wrap gap-4">
 
                             <div class="flex flex-col gap-2">
                                 <label for="group"><strong>Grupo</strong></label>
@@ -191,7 +191,25 @@
 
                         </div>
 
-                        <div class="flex flex-1 flex-col gap-4">
+                        <div class="flex flex-1 flex-col flex-wrap gap-4">
+
+                            <div class="flex flex-col gap-2">
+                                <label for="quantity"><strong>Quantidade</strong></label>
+                                <input class="rounded bg-gray-100 p-2" type="number" step="0.01" id="quantity"
+                                    name="quantity" value="{{ .Quantity }}">
+                                <sub class="text-red-500">{{ .Errors.Quantity }}</sub>
+                            </div>
+
+                            <div class="flex flex-col gap-2">
+                                <label for="value_per_unity"><strong>Valor unitário</strong></label>
+                                <input class="rounded bg-gray-100 p-2" type="number" step="0.01" id="value_per_unity"
+                                    name="value_per_unity" value="{{ .ValuePerUnity }}">
+                                <sub class="text-red-500">{{ .Errors.ValuePerUnity }}</sub>
+                            </div>
+
+                        </div>
+
+                        <div class="flex flex-1 flex-col flex-wrap gap-4">
 
                             <div class="flex flex-col gap-2">
                                 <label for="origin"><strong>Origem</strong></label>
@@ -216,23 +234,6 @@
 
                         </div>
 
-                        <div class="flex flex-1 flex-col gap-4">
-
-                            <div class="flex flex-col gap-2">
-                                <label for="quantity"><strong>Quantidade</strong></label>
-                                <input class="rounded bg-gray-100 p-2" type="number" step="0.01" id="quantity"
-                                    name="quantity" value="{{ .Quantity }}">
-                                <sub class="text-red-500">{{ .Errors.Quantity }}</sub>
-                            </div>
-
-                            <div class="flex flex-col gap-2">
-                                <label for="value_per_unity"><strong>Valor unitário</strong></label>
-                                <input class="rounded bg-gray-100 p-2" type="number" step="0.01" id="value_per_unity"
-                                    name="value_per_unity" value="{{ .ValuePerUnity }}">
-                                <sub class="text-red-500">{{ .Errors.ValuePerUnity }}</sub>
-                            </div>
-
-                        </div>
                     </div>
                 </section>
                 {{ end }}
