refact: entities page now uses go fiber

--- a/web/internal/views/entities.html
+++ b/web/internal/views/entities.html
@@ -11,11 +11,11 @@
                     <th class="flex-1 text-center">Bairro</th>
                 </tr>
             </thead>
-            {{ template "entity-list" . }}
+            {{ template "partials/entity-list" . }}
         </table>
     </section>
     <aside class="w-2/5">
-        {{ template "entity-form" . }}
+        {{ template "partials/entity-form" . }}
     </aside>
     <script src="/static/scripts/entity-page.js"></script>
 </div>
