--- a/web/internal/views/partials/entity-form.html
+++ b/web/internal/views/partials/entity-form.html
@@ -1,4 +1,4 @@
-{{ define "entity-form" }}
+{{ define "partials/entity-form" }}
 <div class="sticky top-20" id="entity-form">
     <form>
         <input type="hidden" name="id" value="{{ .Entity.Id }}">
