--- a/web/internal/views/partials/entity-card.html
+++ b/web/internal/views/partials/entity-card.html
@@ -1,4 +1,4 @@
-{{ define "entity-card" }}
+{{ define "partials/entity-card" }}
     {{ if . }}
         <tr class="flex cursor-pointer gap-12 rounded px-6 py-3 shadow shadow-gray-300 transition-all hover:shadow-gray-500 {{ if .IsSelected }} bg-gray-700 text-white {{ end }}"
             hx-get="/entities/{{ .Id }}/form" hx-trigger="click" hx-target="#entity-form" hx-swap="outerHTML"
