feat: cancel invoices page (still incomplete)

--- a/web/internal/views/layouts/base.html
+++ b/web/internal/views/layouts/base.html
@@ -30,7 +30,9 @@
                         <a href="/invoices">
                             <li class="rounded px-4 py-1 hover:bg-sky-900 active:scale-90">Emitir</li>
                         </a>
-                        <li class="rounded px-4 py-1 hover:bg-sky-900 active:scale-90">Cancelar</li>
+                        <a href="/invoices/cancel">
+                            <li class="rounded px-4 py-1 hover:bg-sky-900 active:scale-90">Cancelar</li>
+                        </a>
                         <li class="rounded px-4 py-1 hover:bg-sky-900 active:scale-90">Modelos</li>
                         <li class="rounded px-4 py-1 hover:bg-sky-900 active:scale-90">Histórico</li>
                     </ul>
