feat: requests progress overview ui

--- a/web/internal/views/layouts/base.html
+++ b/web/internal/views/layouts/base.html
@@ -9,6 +9,7 @@
     <link href="/static/styles/tailwind.css" rel="stylesheet" />
 
     <script src="https://unpkg.com/htmx.org@1.9.5/dist/htmx.min.js"></script>
+    <script src="https://kit.fontawesome.com/58dd7cad0f.js" crossorigin="anonymous"></script>
     <script src="/static/scripts/index.js"></script>
 
     <title>NFF - {{ template "title" . }}</title>
