--- a/web/internal/views/invoices.html
+++ b/web/internal/views/invoices.html
@@ -3,3 +3,7 @@
 <section>
     {{ template "partials/invoice-form" . }}
 </section>
+
+<section class="pt-6">
+    {{ template "partials/requests-overview" . }}
+</section>
