--- a/web/internal/views/invoices-cancel.html
+++ b/web/internal/views/invoices-cancel.html
@@ -3,3 +3,7 @@
 <section>
     {{ template "partials/invoice-cancel-form" . }}
 </section>
+
+<section class="pt-6">
+    {{ template "partials/requests-overview" . }}
+</section>
