--- a/web/internal/views/partials/requests-overview.html
+++ b/web/internal/views/partials/requests-overview.html
@@ -1,7 +1,12 @@
 {{ define "partials/requests-overview" }}
 <h3 class="text-xl font-semibold">Progresso</h3>
 <div class="py-6">
-    <ul>
+    <ul class="flex flex-col gap-4">
+        {{ template "partials/request-card" . }}
+        {{ template "partials/request-card" . }}
+        {{ template "partials/request-card" . }}
+        {{ template "partials/request-card" . }}
+        {{ template "partials/request-card" . }}
         {{ template "partials/request-card" . }}
     </ul>
 </div>
