--- a/web/internal/views/partials/request-card.html
+++ b/web/internal/views/partials/request-card.html
@@ -8,12 +8,12 @@
             <!-- <i class="fa-solid fa-circle-xmark text-red-600"></i> -->
             <!-- <i class="fa-solid fa-triangle-exclamation text-yellow-600"></i> -->
         </div>
-        <span>Emerson</span>
+        <span>{{ .Sender.Name }}</span>
         <svg class="translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
             <path
                 d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
         </svg>
-        <span>Lúcio</span>
+        <span>{{ .Recipient.Name }}</span>
     </div>
     <p class="flex-1 truncate text-green-600">
         Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.
