--- a/web/internal/views/partials/requests-overview.html
+++ b/web/internal/views/partials/requests-overview.html
@@ -2,12 +2,11 @@
 <h3 class="text-xl font-semibold">Progresso</h3>
 <div class="py-6">
     <ul class="flex flex-col gap-4">
-        {{ template "partials/request-card" . }}
-        {{ template "partials/request-card" . }}
-        {{ template "partials/request-card" . }}
-        {{ template "partials/request-card" . }}
-        {{ template "partials/request-card" . }}
-        {{ template "partials/request-card" . }}
+        {{ if .Invoices }}
+            {{ range .Invoices }}
+                {{ template "partials/request-card" . }}
+            {{ end }}
+        {{ end }}
     </ul>
 </div>
 {{ end }}
