--- a/web/internal/views/partials/request-card.html
+++ b/web/internal/views/partials/request-card.html
@@ -21,6 +21,7 @@
     </p>
     <div class="flex flex-1 justify-end gap-3 sm:flex-none">
         <button
+            hx-get="/invoices/{{ .Id }}/request-card-details" hx-trigger="click" hx-target="#request-card-details" hx-swap="outerHTML"
             class="flex w-full justify-center gap-3 rounded bg-yellow-300 px-4 py-2 hover:bg-yellow-400 active:bg-yellow-500 sm:w-fit">
             <svg class="transform lg:translate-y-1" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512">
                 <path
