--- a/web/internal/views/invoices.html
+++ b/web/internal/views/invoices.html
@@ -5,5 +5,5 @@
 </section>
 
 <section class="pt-6">
-    {{ template "partials/requests-overview" . }}
+    {{ template "partials/requests-overview" .Invoices }}
 </section>
