--- a/web/internal/views/partials/requests-overview.html
+++ b/web/internal/views/partials/requests-overview.html
@@ -2,8 +2,8 @@
 <h3 class="text-xl font-semibold">Progresso</h3>
 <div class="py-6">
     <ul class="flex flex-col gap-4">
-        {{ if .Invoices }}
-            {{ range .Invoices }}
+        {{ if . }}
+            {{ range . }}
                 {{ template "partials/request-card" . }}
             {{ end }}
         {{ end }}
