--- a/web/internal/views/partials/requests-overview.html
+++ b/web/internal/views/partials/requests-overview.html
@@ -1,5 +1,5 @@
 {{ define "partials/requests-overview" }}
-<h3 class="text-xl font-semibold">Progresso</h3>
+<h3 class="text-xl font-semibold">Requerimentos</h3>
 <div class="py-6">
     <ul id="requests-overview" class="flex flex-col gap-4">
         {{ if . }}
