--- a/web/internal/views/entities.html
+++ b/web/internal/views/entities.html
@@ -1,20 +1,20 @@
 {{ define "title" }} Entidades {{ end }}
 
-<div class="flex justify-between gap-6">
-    <section class="w-3/5">
+<div class="flex flex-col-reverse gap-6 xl:flex-row xl:justify-between">
+    <section class="xl:w-3/5">
         <table class="flex flex-col gap-6">
             <thead class="sticky top-14 rounded bg-gray-100">
                 <tr class="flex items-center gap-12 px-6 py-3">
                     <th class="flex-1 text-center">Nome</th>
                     <th class="flex-1 text-center">CPF/CNPJ</th>
-                    <th class="flex-1 text-center">Inscrição Estadual</th>
+                    <th class="flex-1 text-center">IE</th>
                     <th class="flex-1 text-center">Bairro</th>
                 </tr>
             </thead>
             {{ template "partials/entity-list" . }}
         </table>
     </section>
-    <aside class="w-2/5">
+    <aside class="xl:w-2/5">
         {{ template "partials/entity-form" . }}
     </aside>
     <script src="/static/scripts/entity-page.js"></script>
