--- a/web/internal/views/partials/request-card-details.html
+++ b/web/internal/views/partials/request-card-details.html
@@ -1,6 +1,6 @@
 {{ define "partials/request-card-details" }}
 
-<dialog id="request-card-details" class="relative w-11/12 rounded px-6 pb-6 sm:w-3/4 md:w-2/3 lg:w-1/2 xl:w-1/3">
+<dialog id="request-card-details" class="w-11/12 rounded px-6 pb-6 sm:w-3/4 md:w-2/3 lg:w-1/2 xl:w-1/3">
     {{ if . }}
 
         {{ $From := "" }}
