feat: responsive entities list and nav bar

--- a/web/internal/views/entities.html
+++ b/web/internal/views/entities.html
@@ -7,8 +7,8 @@
                 <tr class="flex items-center gap-12 px-6 py-3">
                     <th class="flex-1 text-center">Nome</th>
                     <th class="flex-1 text-center">CPF/CNPJ</th>
-                    <th class="flex-1 text-center">IE</th>
-                    <th class="flex-1 text-center">Bairro</th>
+                    <th class="hidden flex-1 text-center sm:block">IE</th>
+                    <th class="hidden flex-1 text-center sm:block">Bairro</th>
                 </tr>
             </thead>
             {{ template "partials/entity-list" . }}
