--- a/web/internal/views/layouts/base.html
+++ b/web/internal/views/layouts/base.html
@@ -20,7 +20,7 @@
 <body>
     {{ template "partials/nav" . }}
 
-    <main id="main" class="px-4 py-4 sm:px-8 sm:py-6">
+    <main id="main" class="px-4 pb-20 pt-4 sm:px-8 sm:py-6">
         {{ embed }}
     </main>
 
