feat: invoice form a little more responsive

--- a/web/internal/views/partials/invoice-form-item-section.html
+++ b/web/internal/views/partials/invoice-form-item-section.html
@@ -13,9 +13,9 @@
         </button>
     </div>
 
-    <div class="flex gap-6 border-b border-gray-400 pb-4 md:flex-col">
+    <div class="flex border-b border-gray-400 pb-4 md:flex-col md:gap-6">
 
-        <div class="flex w-1/2 flex-initial flex-col gap-4 md:w-full md:flex-1 md:flex-row">
+        <div class="flex w-1/2 flex-col gap-4 pr-4 md:w-full md:flex-row md:pr-0">
 
             <div class="flex flex-col gap-2 md:w-1/3">
                 <label for="group"><strong>Grupo</strong></label>
@@ -42,7 +42,7 @@
 
         </div>
 
-        <div class="flex w-1/2 flex-initial flex-col gap-4 md:w-full md:flex-1 md:flex-row">
+        <div class="flex w-1/2 flex-col gap-4 md:w-full md:flex-row">
 
             <div class="flex flex-col gap-2 md:w-1/3">
                 <label class="truncate" for="value_per_unity"><strong>Valor unitário</strong></label>
