--- a/web/internal/views/partials/invoice-form.html
+++ b/web/internal/views/partials/invoice-form.html
@@ -2,29 +2,29 @@
 
 <form id="invoice-form" hx-post="/invoices" hx-target="#requests-overview" hx-swap="afterbegin">
     <div class="flex items-center gap-6 border-b border-gray-300 bg-white pb-2">
-        <button class="flex w-full justify-center rounded bg-green-400 px-4 py-2 hover:bg-green-500 active:bg-green-600 lg:w-auto" type="submit">
-            <svg class="mr-3 translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
+        <button class="flex w-full justify-center gap-3 rounded bg-green-400 px-4 py-2 hover:bg-green-500 active:bg-green-600 md:w-auto" type="submit">
+            <svg class="translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
                 viewBox="0 0 512 512">
                 <path
                 d="M156.6 384.9L125.7 354c-8.5-8.5-11.5-20.8-7.7-32.2c3-8.9 7-20.5 11.8-33.8L24 288c-8.6 0-16.6-4.6-20.9-12.1s-4.2-16.7 .2-24.1l52.5-88.5c13-21.9 36.5-35.3 61.9-35.3l82.3 0c2.4-4 4.8-7.7 7.2-11.3C289.1-4.1 411.1-8.1 483.9 5.3c11.6 2.1 20.6 11.2 22.8 22.8c13.4 72.9 9.3 194.8-111.4 276.7c-3.5 2.4-7.3 4.8-11.3 7.2v82.3c0 25.4-13.4 49-35.3 61.9l-88.5 52.5c-7.4 4.4-16.6 4.5-24.1 .2s-12.1-12.2-12.1-20.9V380.8c-14.1 4.9-26.4 8.9-35.7 11.9c-11.2 3.6-23.4 .5-31.8-7.8zM384 168a40 40 0 1 0 0-80 40 40 0 1 0 0 80z" />
             </svg>
-            Requerer NFA
+            <span>Requerer NFA</span>
         </button>
-        <button class="flex w-full justify-center rounded bg-sky-300 px-4 py-2 hover:bg-sky-400 active:bg-sky-500 lg:w-auto" type="button">
-            <svg class="mr-3 translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
+        <button class="flex w-full justify-center gap-3 rounded bg-sky-300 px-4 py-2 hover:bg-sky-400 active:bg-sky-500 md:w-auto" type="button">
+            <svg class="translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
                 viewBox="0 0 576 512">
                 <path
                 d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384V285.7l-86.8 86.8c-10.3 10.3-17.5 23.1-21 37.2l-18.7 74.9c-2.3 9.2-1.8 18.8 1.3 27.5H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zM549.8 235.7l14.4 14.4c15.6 15.6 15.6 40.9 0 56.6l-29.4 29.4-71-71 29.4-29.4c15.6-15.6 40.9-15.6 56.6 0zM311.9 417L441.1 287.8l71 71L382.9 487.9c-4.1 4.1-9.2 7-14.9 8.4l-60.1 15c-5.5 1.4-11.2-.2-15.2-4.2s-5.6-9.7-4.2-15.2l15-60.1c1.4-5.6 4.3-10.8 8.4-14.9z"/>
             </svg>
-            Usar Modelo
+            <span>Usar Modelo</span>
         </button>
         <p id="invoice-form-msg" class="flex-1 text-green-500 text-red-500 {{ if not .FormMsg }} hidden {{ end }}">{{ .FormMsg }}</p>
     </div>
 
     <section>
-        <div class="flex gap-6 border-b border-gray-400 py-4 md:flex-col">
+        <div class="flex border-b border-gray-400 py-4 md:flex-col md:gap-6">
 
-            <div class="flex w-1/2 flex-initial flex-col gap-4 md:w-full md:flex-1 md:flex-row">
+            <div class="flex w-1/2 flex-col gap-4 pr-4 md:w-full md:flex-1 md:flex-row md:pr-0">
 
                 <div class="flex flex-col gap-2 md:w-1/5">
                     <label for="sender"><strong>Remetente</strong></label>
@@ -78,7 +78,7 @@
 
             </div>
 
-            <div class="flex w-1/2 flex-initial flex-col gap-4 md:w-full md:flex-1 md:flex-row">
+            <div class="flex w-1/2 flex-col gap-4 md:w-full md:flex-1 md:flex-row">
 
                 <div class="flex flex-col gap-2 md:w-1/5">
                     <label class="truncate" for="is_final_customer"><strong>Consumidor Final</strong></label>
