perf: parallel validation on models

--- a/web/internal/static/styles/tailwind.css
+++ b/web/internal/static/styles/tailwind.css
@@ -935,11 +935,6 @@ video {
   line-height: 1rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1350,6 +1345,10 @@ video {
 
   .lg\:flex-col {
     flex-direction: column;
+  }
+
+  .lg\:gap-0 {
+    gap: 0px;
   }
 
   .lg\:pr-0 {
