--- a/web/internal/views/partials/entity-form.html
+++ b/web/internal/views/partials/entity-form.html
@@ -9,7 +9,7 @@
         </div>
         <hr>
         <div class="mt-4 flex lg:flex-col xl:flex-row">
-            <div class="flex w-1/2 flex-col lg:w-full lg:flex-row xl:w-1/2 xl:flex-col xl:gap-4 xl:pr-3">
+            <div class="flex w-1/2 flex-col gap-1 lg:w-full lg:flex-row lg:gap-0 xl:w-1/2 xl:flex-col xl:gap-4 xl:pr-3">
                 <div class="flex flex-col gap-2 pr-4 lg:w-1/5 xl:w-full xl:pr-0">
                     <label class="truncate" for="user_type"><strong>Tipo</strong></label>
                     <select class="h-10 rounded bg-gray-100 p-2" id="user_type" name="user_type">
@@ -48,7 +48,7 @@
                 </div>
             </div>
 
-            <div class="flex w-1/2 flex-col lg:w-full lg:flex-row xl:w-1/2 xl:flex-col xl:gap-4 xl:pl-3">
+            <div class="flex w-1/2 flex-col gap-1 lg:w-full lg:flex-row lg:gap-0 xl:w-1/2 xl:flex-col xl:gap-4 xl:pl-3">
                 <div class="flex flex-col gap-2 lg:w-1/5 lg:pr-4 xl:w-full xl:pr-0">
                     <label class="truncate" for="postal_code"><strong>CEP</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="text" id="postal_code" name="postal_code"
